EEC_InitBackup/src/objects/Employment_History__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employment History</relationshipLabel>
        <relationshipName>Employment_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Address__c</fullName>
        <label>Employer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <inlineHelpText>Phone number the employer can be contacted</inlineHelpText>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <inlineHelpText>Name of the employer</inlineHelpText>
        <label>Employer</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensing_Transaction__c</fullName>
        <inlineHelpText>Transaction this record was captured from</inlineHelpText>
        <label>Licensing Transaction</label>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Employment History</relationshipLabel>
        <relationshipName>Employment_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <inlineHelpText>Position Occupied with this employer</inlineHelpText>
        <label>Position</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving__c</fullName>
        <label>Reason for Leaving</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Reason_For_Leaving_Mandatory_If</fullName>
        <active>true</active>
        <description>If the End Date is provided, Reason for Leaving is mandatory</description>
        <errorConditionFormula>ISBLANK( Reason_for_Leaving__c )  &amp;&amp;   NOT(ISBLANK( End_Date__c ))</errorConditionFormula>
        <errorDisplayField>Reason_for_Leaving__c</errorDisplayField>
        <errorMessage>If the End Date is provided, Reason for Leaving is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Superior_to_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISNULL(End_Date__c)), End_Date__c &lt;  Start_Date__c )</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be superior to Start Date</errorMessage>
    </validationRules>
</CustomObject>